# FPCR

./: .copilot-instructions.md  .env  .env.test  .gitignore  .graphify_python  .markdownlint.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  FWTeam_admins.csv  README.md  check.ps1  fingerprints.txt  mock_data.json  mock_data.txt  mock_data.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  run.cmd  run_fa.cmd  run_fa.sh  run_tests.sh  ty.toml
.github/prompts/: archive-task.prompt.md
docs/: CONTEXT.md  GRAPHIFY-RELABEL.md  GRAPHIFY_INTEGRATION.md  MCP_CONFIG.md  MCP_PERSONAL.md  MCP_QUICKREF.md
docs/plans/: 260219-webui.md  260220-package-selection.md  260220-webui-styling.md  260305-mock-data-source-design.md  260305-mock-data-source-impl.md  260306-domains-2-design.md  260306-domains-2-implementation.md  260306-domains-rule-cards-design.md  260306-domains-rule-cards-plan.md  260307-hostname-in-predictions-design.md  260307-hostname-in-predictions-implementation.md  260307-task10-verification-summary.md  260315-domains-real-data-cache-design.md  260315-domains-real-data-cache.md
ops/: add_hosts-01.yaml  checkpoint_ops_schema.json  prep_search.yaml
ops/templates/: example-with-nat.yaml  example-with-rules.yaml
src/: cpsearch.py  credential_auth_app.py  fpcr.py  utils.py
src/cpcrud/: __init__.py  business_logic.py  config.py  cpcrud.py  object_manager.py  position_helper.py  rule_manager.py
src/fa/: __init__.py  app.py  cache_service.py  config.py  db.py  mock_source.py  models.py  radius.py  session.py
tests/: conftest.py  test_mock_source.py
tests/cpcrud/: test_object_manager.py  test_position_helper.py
tests/fa/: conftest.py  test_cache_service.py  test_evidence_generator.py  test_initials_loader.py  test_policy_verifier.py  test_routes_mock.py  (+2 more)
webui/: index.html  package-lock.json  package.json  sync-version.js  tsconfig.json  vite.config.ts
(+161 files in other folders)
